Established a connection with the api on click now i need to change the promote button to rivalry

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <div class="small-3 columns">
                  <button type="submit" class="button expanded">Add Student</button>
             </div>
+              <a href="https://xtern-roster.herokuapp.com/people/"
+              data-remote-student="true">Display all Students</a>
         </form>
       </div>
     </div>
@@ -38,5 +40,6 @@
     <script src="js/vendor/what-input.js"></script>
     <script src="js/vendor/foundation.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/studentapi.js"></script
   </body>
 </html>
